<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BestFood</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- 권한 화면 -->
    <string name="permission_checking">권한 확인중...</string>
    <string name="permission_setting_title">권한 설정</string>
    <string name="permission_setting_message">앱을 실행하기 위해서는 권한 설정을 해야 합니다!</string>
    <string name="permission_setting_restart">권한을 설정하고 다시 실행해주세요!</string>

    <!-- 시작 화면 -->
    <string name="index_message">최고의 음식점\n모두 모아\n베스트푸드</string>
    <string name="delicious">Delicious</string>

    <string name="submit">확인</string>
    <string name="network_not_working">네크워크에 연결되어 있지 않습니다.\n확인후 다시 실행해주세요.</string>

    <!-- 왼쪽 메뉴 -->
    <string name="nav_list">맛집리스트</string>
    <string name="nav_map">지도리스트</string>
    <string name="nav_keep">즐겨찾기</string>
    <string name="nav_register">맛집등록</string>
    <string name="nav_profile">프로필설정</string>

    <!-- 공통 -->
    <string name="skip_string">...</string>

    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>

    <!-- 프로필 -->
    <string name="profile_setting">프로필 설정</string>

    <string name="profile_name">이름</string>
    <string name="profile_sextype">성별</string>
    <string name="profile_birth">생일</string>
    <string name="profile_phone">전화</string>

    <string name="sex_man">남자</string>
    <string name="sex_woman">여자</string>

    <string name="device_number">기기 번호</string>
    <string name="phone_number">전화 번호</string>

    <string name="name_need">이름을 설정해주세요</string>
    <string name="change_save">변경사항을 저장하시겠습니까?</string>

    <string name="no_change">변경된 사항이 없습니다</string>
    <string name="no_data">데이터가 없습니다</string>

    <string name="member_insert_fail_message">사용자 등록에 실패하였습니다. 다시 시도해주세요.</string>

    <!-- 프로필 아이콘 -->
    <string name="albumn">앨범</string>
    <string name="camera">카메라</string>

    <!-- 맛집 등록 -->
    <string name="bestfood_register">맛집 등록</string>
    <string name="input_bestfood_name">음식점이름을 입력해주세요</string>
    <string name="input_bestfood_address">주소를 입력해주세요</string>
    <string name="input_bestfood_tel">전화번호를 입력해주세요</string>
    <string name="input_bestfood_description">설명을 입력해주세요</string>
    <string name="input_bestfood_image_memo">이미지 설명을 입력해주세요(생략가능)</string>
    <string name="input_text_length">글자수 :</string>
    <string name="input_text_max_length">/500</string>

    <string name="not_valid_tel_number">잘못된 번호입니다.</string>


    <!-- 맛집 이미지 등록 화면 -->
    <string name="title_bestfood_image_register">이미지 등록</string>
    <string name="no_image_ready">이미지를 준비중입니다. 잠시 후에 다시 시도해주세요</string>
    <string name="no_image_selected">이미지를 먼저 선택해주세요</string>

    <!-- 맛집 리스트 화면 -->
    <string name="order_meter">거리순</string>
    <string name="order_favorite">인기순</string>
    <string name="order_recent">최근순</string>

    <!-- 지도 리스트 화면 -->
    <string name="list_open">목록보기</string>
    <string name="list_close">목록닫기</string>
    <string name="no_list">현재 위치에는 조회할 데이터가 없습니다.</string>
    <string name="message_zoom_level_max_over">지도를 좀 더 확대해야 배너가 보입니다.</string>
    <string name="unit_m">m</string>
    <string name="unit_km">Km</string>

    <!-- DialogLib.java -->
    <string name="keep_insert">즐겨찾기 등록</string>
    <string name="keep_insert_message">즐겨찾기에 등록하시겠습니까?</string>

    <string name="keep_delete">즐겨찾기 삭제</string>
    <string name="keep_delete_message">즐겨찾기에서 삭제하시겠습니까?</string>

    <!-- 맛집 정보 화면 -->
    <string name="description">상세설명</string>
    <string name="map">지도</string>
    <string name="location">위치보기</string>
    <string name="no_text">없음</string>
    <string name="loading">잠시만 기다려주세요</string>
    <string name="loading_not">잠시후에 다시 시도해주세요</string>

    <!-- 즐겨찾기 -->
    <string name="no_keep">즐겨찾기에 등록된 음식점이 없습니다.</string>

</resources>
