<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/g1"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_list" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_keep"
            android:icon="@drawable/ic_keep_off"
            android:title="@string/nav_keep" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_register"
            android:title="@string/nav_register" />
    </group>

    <group
        android:id="@+id/g2"
        android:checkableBehavior="all" >
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile"/>
    </group>
</menu>
