<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_large"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="top"
            android:src="@drawable/ic_person"
            app:civ_border_color="#AAAAAA"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/profile_icon_change"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/button_circle"
            android:elevation="4dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_name"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="start"
            android:maxLines="1"
            android:maxLength="7"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_sextype"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_sextype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:focusable="false"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_birth"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:focusable="false"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_phone"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:enabled="false"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/phone_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="phone"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

</LinearLayout>