<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar_layout"
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:background="@color/bg_default"
            android:paddingBottom="@dimen/text_size_medium"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_basic_gray">

                <ImageView
                    android:id="@+id/info_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@drawable/bg_round"
                android:padding="@dimen/spacing_medium"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text=""
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/text_color_black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/keep"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_keep_off" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:drawableStart="@drawable/ic_tell"
                    android:drawablePadding="@dimen/spacing_small"
                    android:gravity="start|center_vertical"
                    android:textSize="@dimen/text_size_small2"
                    android:textColor="@color/text_color_black"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@drawable/bg_round"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/description"
                    android:textColor="@color/text_color_green"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="start"
                    android:text=""
                    android:textSize="@dimen/text_size_small2"
                    android:textColor="@color/text_color_black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@drawable/bg_round"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/map"
                        android:textColor="@color/text_color_green"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/location"
                        android:textSize="@dimen/text_size_small2"
                        android:textColor="@color/text_color_gray"
                        android:textStyle="bold"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="address"
                    android:textSize="@dimen/text_size_small2"
                    android:textColor="@color/text_color_black" />

                <fragment
                    android:id="@+id/map"
                    class="com.mobitant.bestfood.custom.WorkaroundMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="@dimen/spacing_small" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include android:id="@+id/loading_layout"
        layout="@layout/loading_layout" />
</RelativeLayout>